--- a/www/css/screen.css
+++ b/www/css/screen.css
@@ -1,54 +1,55 @@
+/**
+ * ldap-passwd-changer
+ * Simple set of PHP scripts enabling LDAP users to change their passwords
+ *
+ * Copyright (C) 2015 Jan Buriánek <burianek.jen@gmail.com>
+ *
+ * Tento program je svobodný software: můžete jej šířit
+ * a upravovat podle ustanovení Obecné veřejné licence GNU (GNU General Public Licence),
+ * vydávané Free Software Foundation a to buď podle 3. verze této Licence,
+ * nebo (podle vašeho uvážení) kterékoli pozdější verze.
+ *
+ * Tento program je rozšiřován v naději, že bude užitečný,
+ * avšak BEZ JAKÉKOLIV ZÁRUKY. Neposkytují se ani odvozené záruky
+ * PRODEJNOSTI anebo VHODNOSTI PRO URČITÝ ÚČEL. Další podrobnosti
+ * hledejte v Obecné veřejné licenci GNU.
+ *
+ * Kopii Obecné veřejné licence GNU jste měli obdržet spolu s tímto programem.
+ * Pokud se tak nestalo, najdete ji zde: <http://www.gnu.org/licenses/>.
+ */
+
 body {
-	font-size: 15px;
-	line-height: 1.6;
-	color: #333;
-	background: white;
+	padding-top: 40px;
+	padding-bottom: 40px;
+	background-color: #eee;
 }
 
-h1 {
-	color: #3484D2;
+.auth-form {
+	max-width: 330px;
+	padding: 15px;
+	margin: 0 auto;
 }
+.auth-form .form-signin-heading,
 
-#ajax-spinner {
-	margin: 15px 0 0 15px;
-	padding: 13px;
-	background: white url('../images/spinner.gif') no-repeat 50% 50%;
-	font-size: 0;
-	z-index: 123456;
-	display: none;
+.auth-form .form-control {
+	position: relative;
+	height: auto;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	padding: 10px;
+	font-size: 16px;
 }
-
-div.flash {
-	color: black;
-	background: #FFF9D7;
-	border: 1px solid #E2C822;
-	padding: 1em;
-	margin: 1em 0;
+.auth-form .form-control:focus {
+	z-index: 2;
 }
-
-a[href^="#error:"] {
-	background: red;
-	color: white;
+.auth-form input[type="text"] {
+	margin-bottom: -1px;
+	border-bottom-right-radius: 0;
+	border-bottom-left-radius: 0;
 }
-
-form th, form td {
-	vertical-align: top;
-	font-weight: normal;
-}
-
-form th {
-	text-align: right;
-}
-
-form .required label {
-	font-weight: bold;
-}
-
-form .error {
-	color: #D00;
-	font-weight: bold;
-}
-
-html.js .jshidden {
-	display: none;
+.auth-form input[type="password"] {
+	margin-bottom: 10px;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
 }
