Both forms are working

--- a/app/templates/components/passwdInteractiveForm.latte
+++ b/app/templates/components/passwdInteractiveForm.latte
@@ -1,3 +1,9 @@
 <div class="container">
 	{control authForm}
+	{control passChangeForm}
 </div> <!-- /container -->
+
+{block scripts}
+	<script src="{$basePath}/js/jquery.form.js"></script>
+	<script src="{$basePath}/js/forms.js"></script>
+{/block}
