--- a/www/css/screen.css
+++ b/www/css/screen.css
@@ -24,14 +24,29 @@ body {
 	background-color: #eee;
 }
 
-.auth-form {
+form {
 	max-width: 330px;
 	padding: 15px;
 	margin: 0 auto;
 }
-.auth-form .form-signin-heading,
 
-.auth-form .form-control {
+form ul {
+	font-weight: bold;
+}
+.form-signin-title, .form-signin-heading {
+	position: relative;
+	height: auto;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	padding: 10px;
+	text-align: center;
+}
+.form-signin-title {
+	font-size: 100px;
+}
+
+.form-control {
 	position: relative;
 	height: auto;
 	-webkit-box-sizing: border-box;
@@ -40,7 +55,7 @@ body {
 	padding: 10px;
 	font-size: 16px;
 }
-.auth-form .form-control:focus {
+form .form-control:focus {
 	z-index: 2;
 }
 .auth-form input[type="text"] {
@@ -52,4 +67,68 @@ body {
 	margin-bottom: 10px;
 	border-top-left-radius: 0;
 	border-top-right-radius: 0;
+}
+
+#frm-passwdInteractiveForm-passChangeForm-password1 {
+	margin-bottom: -1px;
+	border-bottom-right-radius: 0;
+	border-bottom-left-radius: 0;
+}
+#frm-passwdInteractiveForm-passChangeForm-password2 {
+	margin-bottom: 10px;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+}
+
+form .btn-block {
+	min-height: 54px;
+}
+
+.loader {
+	display: none;
+}
+
+.img-OK {
+	display: none;
+}
+
+.transform-hide {
+	-webkit-transform: scale3d(0, 0, 0);
+	-moz-transform: scale3d(0, 0, 0);
+	-o-transform: scale3d(0, 0, 0);
+	-ms-transform: scale3d(0, 0, 0);
+	transform: scale3d(0, 0, 0);
+
+	-webkit-transition-duration: 1s;
+	-moz-transition-duration: 1s;
+	-o-transition-duration: 1s;
+	transition-duration: 1s;
+}
+.transform-hide-immediately {
+	-webkit-transform: scale3d(0, 0, 0);
+	-moz-transform: scale3d(0, 0, 0);
+	-o-transform: scale3d(0, 0, 0);
+	-ms-transform: scale3d(0, 0, 0);
+	transform: scale3d(0, 0, 0);
+
+	-webkit-transition-duration: 0s;
+	-moz-transition-duration: 0s;
+	-o-transition-duration: 0s;
+	transition-duration: 0s;
+}
+.transform-show {
+	-webkit-transform: scale3d(1, 1, 1);
+	-moz-transform: scale3d(1, 1, 1);
+	-o-transform: scale3d(1, 1, 1);
+	-ms-transform: scale3d(1, 1, 1);
+	transform: scale3d(1, 1, 1);
+
+	-webkit-transition-duration: 1s;
+	-moz-transition-duration: 1s;
+	-o-transition-duration: 1s;
+	transition-duration: 1s;
+}
+
+.alert p {
+	margin-top: 5px;
 }
