Complete UI, time tracking, logging integration

--- a/app/templates/components/passwdInteractiveForm.latte
+++ b/app/templates/components/passwdInteractiveForm.latte
@@ -1,6 +1,11 @@
 <div class="container">
 	{control authForm}
 	{control passChangeForm}
+
+	<div id="end-message" class="alert alert-success" style="display: none">
+		<p><strong>Your password has been successfully updated!</strong></p>
+		<p>Close this window or return to <a href="./">homepage</a>.</p>
+	</div>
 </div> <!-- /container -->
 
 {block scripts}
